[gd_scene load_steps=4 format=3 uid="uid://c40660wl8h7pu"]

[ext_resource type="PackedScene" uid="uid://djg11mldwxkjo" path="res://ui/menu/options_menu/option_video/components/options_display_button.tscn" id="1_sbhsk"]
[ext_resource type="Script" path="res://ui/menu/options_menu/option_video/components/window_mode_button.gd" id="2_srao2"]
[ext_resource type="AudioStream" uid="uid://cem7omqs5ar48" path="res://assets/audios/sfx/hit.mp3" id="3_48ifl"]

[node name="Window_Mode_Button" instance=ExtResource("1_sbhsk")]
script = ExtResource("2_srao2")

[node name="Label" parent="HBoxContainer" index="0"]
text = "Tela"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource("3_48ifl")
volume_db = -11.345

[connection signal="button_down" from="HBoxContainer/OptionButton" to="." method="_on_option_button_button_down"]
[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
